--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,20 @@
 {
   "extends": "eslint:recommended",
+  "plugins": ["react"],
   "ecmaFeatures": {
     "modules": true,
     "jsx": true
   },
   "env": {
+    "browser": true,
     "node": true,
+    "commonjs": true,
+    "amd": true,
     "mocha": true,
     "es6": true
   },
   "rules": {
+    "strict": 0,
     "array-bracket-spacing": [
       0,
       "never"
@@ -118,7 +123,7 @@
     "new-cap": 1,
     "new-parens": 2,
     "no-array-constructor": 2,
-    "no-extra-parens": 2,
+    "no-extra-parens": [2, "functions"],
     "no-new-object": 2,
     "no-spaced-func": 2,
     "no-trailing-spaces": 2,
@@ -131,10 +136,10 @@
         "after": true
       }
     ],
-    "space-return-throw-case": 2
-  },
-  "ecmaFeatures": {
-    "modules": true
+    "space-return-throw-case": 2,
+    "react/wrap-multilines": 2,
+    "react/jsx-uses-vars": 2,
+    "react/jsx-no-undef": 2
   }
 }
 
