support es7 class static props

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
   "extends": "eslint:recommended",
+  "parser": "babel-eslint",
   "plugins": ["react"],
   "ecmaFeatures": {
+    "classes": true,
     "modules": true,
     "jsx": true
   },
