--- a/.eslintrc
+++ b/.eslintrc
@@ -45,7 +45,7 @@
       "never"
     ],
     "quote-props": [
-      2,
+      1,
       "as-needed"
     ],
     "quotes": [
@@ -115,7 +115,7 @@
     "no-return-assign": 2,
     "no-script-url": 2,
     "no-sequences": 2,
-    "no-unused-expressions": 2,
+    "no-unused-expressions": [2, {"allowTernary": true, "allowShortCircuit": true}],
     "yoda": 2,
     "no-shadow": 2,
     "no-shadow-restricted-names": 2,
@@ -123,6 +123,7 @@
     "camelcase": 2,
     "comma-spacing": 2,
     "new-cap": 1,
+    "no-warning-comments": [1, { "location": "anywhere" }],
     "new-parens": 2,
     "no-array-constructor": 2,
     "no-extra-parens": [2, "functions"],
